# Optimization

./: README.md
biclique/: main.cpp  main.cpp.out  main.cpp.out.ld_JdtQid  new.cpp  new.cpp.out
biclique/main.cpp.out.dSYM/Contents/Resources/DWARF/: main.cpp.out
biclique/new.cpp.out.dSYM/Contents/: Info.plist
biclique/new.cpp.out.dSYM/Contents/Resources/DWARF/: new.cpp.out
k-defective/: BaoSolver.cpp  BaoSolver.h  BitSetImplement.cpp  BitSetImplement.h  CMakeLists.txt  Common.h  Compare.cpp  Compare.h  GraphGenerator.cpp  GraphGenerator.h  MADEC-CORE.cpp  MADEC-CORE.h  MoMC2016.cpp  MoMC2016.h  MyBitSet.cpp  MyBitSet.h  MyBitSetImplement.cpp  MyBitSetImplement.h  MyInstall.sh  PreWorker.cpp  PreWorker.h  README.org  STLSetImplement.cpp  STLSetImplement.h  ToDoList.md  TodoList.org  kDefective.h  kDefectiveBase.cpp  kDefectiveBase.h  kDefectiveBitSet.cpp  kDefectiveBitSet.h  kDefectiveCPLEX.cpp  kDefectiveCPLEX.h  kDefectiveGurobi.cpp  kDefectiveIP.cpp  kDefectiveIP.h  kDefectiveMADEC.cpp  kDefectiveMADEC.h  kDefectiveR2MC.cpp  kDefectiveR2MC.h  (+7 more)
k-defective/Debug/: GetCommand.py  RandomGraph.py  TestList.txt  TestList_10th.txt  TestList_DIMACS.txt  check.sh  draw.m  perform.sh  table.html  task.slurm
k-defective/Debug/RandomGraph/: RGPL.py  RandomGraph.py
k-defective/Debug/draw.project/: draw.html  draw.js  draw.py
k-defective/Debug/formGenerator/: diagramGen.py  formGenerator.cpp  formGenerator.py  head.tex  plot.py  tail.tex
k-defective/Document/ReductionByDiam/: dynamic.ggb  main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv  origin-to-special.dia
k-defective/IPmodel/: kdefective.mod
k-defective/MOMC-TEST/: MoMC2016.c  makefile
k-defective/amplapi/: changes.txt
k-defective/amplapi/include/ampl/: ampl.h  amplexception.h  dataframe.h  entity.h  entitymap.h  environment.h  errorhandler.h  format.h  instance.h  optional.h  output.h  runnable.h  string.h  tuple.h  variant.h
k-defective/amplapi/include/ampl/ep/: ampl_ep.h  arg.h  countediterator.h  dataframe_ep.h  declarations.h  entity_ep.h  entitymap_ep.h  environment_ep.h  error_information.h  errorinfo_ep.h  format.cc  instance_ep.h  scopedarray.h  slice.h  tuple_ep.h  variant_ep.h
k-defective/amplapi/lib/: libampl.2.0.0.3.dylib  libampl.2.dylib  libampl.dylib  libjavaswigwrapper.jnilib
k-defective/amplapi/lib/python/src/: amplpython.py  amplpythonPYTHON_wrap.cxx  amplpythonPYTHON_wrap.h
k-defective/unused-sources/: kDefectiveGurobi.cpp  kDefectiveGurobi.h
